- adopted to support add functionality - javadoc documentation enhanced - checkstyle applied